# ad_hoc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: il_cost_breakdown.csv  soft_cost_breakdown.csv
exploratory/: lbnl_dgstats_comparison.ipynb
notebooks/: arizona_permit_analysis.ipynb  avoided_gas_capacity.ipynb  california_inspection_timelines.ipynb  co_hourly_profiles.ipynb  florida_shovels_exploration.ipynb  il_cost_breakdown.ipynb  il_hourly_profiles.ipynb  illinois_hvac_permit_analysis.ipynb  illinois_panel_analysis.ipynb  ma_hourly_profiles.ipynb  nj_hourly_profiles.ipynb  rockefeller_jobs.ipynb  sb_379_exploration.ipynb  shovels_permit_analysis.ipynb  solar_bill_analysis.ipynb  technical_potential_analysis.ipynb  texas_panel_analysis.ipynb  tx_system_size_analysis.ipynb  weighted_average_insolation.ipynb
src/: avoided_gas_capacity.py  build_hourly_load.py  solar_bill_analysis.py
